--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,24 +1,77 @@
+
+
+
+html {
+  font-family: "Avenir", sans-serif;
+  max-width: 1300px;
+}
+
+.sitecontainer {
+
+}
+
 header {
-  height: 64px
+  width: 1300px;
+  border-bottom: solid 1px #c6c1c1;
+  height: 64px;
+
 }
 
 header .logo {
-  margin-left: 24px;
   height: 32px;
+  display: flex;
+  align-items: center;
+  padding: 16px 24px;
+  flex: 1;
+  width: 100%;
 }
 
-header nav {
+.logo img {
+  font-size: 30px;
+  margin-left: 24px;
+  align-self: center;
+  margin-right: 5px;
+}
+
+.logo span {
+}
+
+span h1 {
+}
+
+
+#darkgrey {
+  color: #2F363D;
+  font-weight:
+}
+
+#silver {
+  color: silver;
+}
+
+nav ul {
+  display: flex;
   margin-right: 24px;
 }
 
-ul li a {
+nav li {
+  padding-left: 3.5rem;
+  display: flex;
+}
+
+nav a {
+  display: flex;
   margin-left: 16px;
+  vertical-align: bottom;
+  align-self: flex-end;
 }
 
 .intro {
+  background-color: silver;
 }
 
-.intro .learn {
+.learn {
+  background-color: silver;
   margin: 32px 24px;
 }
 
@@ -26,9 +79,14 @@ ul li a {
   width: 60%;
   margin-bottom: 32px;
   margin-right: 24px;
+  display: flex;
+  flex-direction: column;
 }
 
-.learn .learnright {
+.learnright {
+  display: flex;
+  flex-direction: column;
+  float: left;
 }
 
 .learnright .learntxt {
@@ -37,6 +95,8 @@ ul li a {
 .learnright .learnbutton {
   padding-top: 8px;
   padding-bottom: 8px;
+  background-color: #2F363D;
+  color: white;
 }
 
 .info {
