--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,7 +6,7 @@ html {
 }
 
 body {
-  width: 1301px;
+  width: 1346px;
   overflow-x: hidden;
 }
 
@@ -87,9 +87,8 @@ a {
 }
 
 .learn .learnpic {
-  width: 60%;
-  margin-bottom: 32px;
-  padding-left: 24px;
+  width: 56%;
+  margin: 0px 24px 32px 24px;
   display: flex;
   flex-direction: column;
   background-color: silver;
@@ -98,6 +97,7 @@ a {
 .learnright {
   width: 40%;
   float: right;
+  display: flex;
   flex-direction: column;
   padding: 50px 24px;
 }
@@ -133,7 +133,7 @@ h2 {
 
 .info {
   background-color: #F8F8FF;
-  padding: 32px 24px;
+  padding: 0px 24px;
 }
 
 .info .practice {
@@ -182,6 +182,7 @@ h2 {
 
 .inforight .infoitem {
   display: flex;
+  width: 100%;
 }
 
 .infoitem .infopic {
