--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,7 +6,7 @@ html {
 }
 
 body {
-  width: 2075px;
+  width: 2050px;
 }
 
 .sitecontainer {
@@ -54,26 +54,25 @@ h1 {
   width: 96px;
 }
 
-nav {
+.logo nav {
   width: 100%;
+  padding-right: 48px;
 }
 
 nav ul {
-  margin-right: 24px;
   display: flex;
-  flex-direction: row-reverse;
+  justify-content: flex-end;
 }
 
 ul li {
-  padding-left: 3.5rem;
   float: right;
 }
 
 a {
-  display: flex;
-  margin-left: 16px;
+  margin: 16px;
   vertical-align: bottom;
   text-align: right;
+  font-size: 32px;
 }
 
 .intro {
@@ -85,7 +84,6 @@ a {
   background-color: silver;
   display: flex;
   padding-top: 32px;
-  padding-bottom: 32px;
 }
 
 .learn .learnpic {
@@ -101,29 +99,30 @@ a {
   float: right;
   display: flex;
   flex-direction: column;
-  padding: 165px 24px;
+  padding: 165px 70px;
 }
 
 h2 {
-  font-size: 50px;
+  font-size: 75px;
   font-weight: bold;
   color: #2F363D;
 }
 
 h3 {
-  margin-top: 20px;
-  font-size: 28px;
-  line-height: 32px;
+  margin-top: 45px;
+  font-size: 38px;
+  line-height: 55px;
   color: #2F363D;
+  font-weight: bold;
 }
 
 .learnright .learnbutton {
-  margin-top: 24px;
+  margin-top: 56px;
   padding-top: 8px;
   flex-direction: column;
   padding-bottom: 8px;
   background-color: #2F363D;
-  width: 75%;
+  width: 80%;
   display: flex;
   align-items: center;
 }
@@ -145,10 +144,10 @@ h3 {
 
 .practice .practicepic {
   background-color: #F8F8FF;
-  width: 60%;
+  width: 55%;
   margin: 32px 24px;
   border-right: silver;
-  margin-right:
+  padding-top: 32px;
 }
 
 .practicepic img {
@@ -176,7 +175,7 @@ h3 {
   width: 40%;
   margin-left: 24px;
   padding-top: 32px;
-  border-left: 2px solid silver;
+  border-left: 1px solid silver;
   margin-top: 0px;
   display: flex;
   flex-direction: column;
@@ -188,7 +187,7 @@ h3 {
 }
 
 .infoitem .infopic {
-  padding: 16px;
+  padding: 28px 38px;
   width: 35%;
   height: auto;
 }
