--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -184,10 +184,10 @@ h3 {
 .inforight .infoitem {
   display: flex;
   width: 100%;
+  padding: 16px;
 }
 
 .infoitem .infopic {
-  padding: 28px 38px;
   width: 35%;
   height: auto;
 }
@@ -199,6 +199,23 @@ h3 {
 
 .infoitem .infotxt {
   width: 65%;
+  margin-top: 50px;
+}
+
+.infoitem h3 {
+  margin-bottom: 8px;
+}
+
+h4 {
+  font-size: 28px;
+  color: grey;
+  margin-bottom: 28px;
+}
+
+.infotxt a {
+  font-size: 28px;
+  color: lightblue;
+  margin-left: auto;
 }
 
 .inforight .guest {
