--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -155,8 +155,10 @@ h3 {
 }
 
 .practicepic h2 {
-  margin-bottom: 24px;
-  margin-top: 32px;
+  margin-bottom: 64px;
+  margin-top: 80px;
+  font-size: 60px;
+  font-weight: bold;
 }
 
 .practicepic h4 {
@@ -166,9 +168,10 @@ h3 {
 }
 
 .practicepic h5 {
-  font-size: 26px;
+  font-size: 24px;
   color: #2F363D;
   padding: 32px 0px;
+  margin-bottom: 32px;
 }
 
 .info .inforight {
@@ -214,6 +217,7 @@ h4 {
   font-size: 28px;
   color: grey;
   margin-bottom: 28px;
+  line-height: 40px;
 }
 
 .infotxt a {
@@ -236,17 +240,17 @@ h4 {
 }
 
 .guestxt {
-  line-height: 8px;
-}
-
-.infotxt {
-  width: 65%;
-  margin-top: 50px;
+  line-height: 32px;
+  padding-top: 50px;
 }
 
 .guestxt h3 {
   margin-bottom: 8px;
   margin-top: 20px;
+}
+
+.guestxt h4 {
+  margin-bottom: 16px;
 }
 
 .guestxt a {
@@ -264,6 +268,12 @@ h4 {
 
 .learning .start {
   text-align: center;
+}
+
+.start h2 {
+  margin-top: 56px;
+  margin-right: 8px;
+  font-size: 56px;
 }
 
 .learning .main {
