--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -321,20 +321,26 @@ h4 {
 .thesis h2 {
   text-align: center;
   font-size: 60px;
+  margin-bottom: 0px;
 }
 
 .thesis .exhibit {
+  display: flex;
 }
 
 .thesis .exhibita {
-  padding-bottom: 32px;
+  padding-top: 0px;
+  width: 55%;
+  background-color: silver;
+  margin-left: 24px;
+  margin-bottom: 24px;
+  margin-top: 80px;
+  border: solid 4px #c6c1c1;
 }
 
 .exhibita .exhibitavid {
-  width: 60%;
-  margin-left: 24px;
-  margin-bottom: 24px;
-  margin-top: 32px;
+  width: 100%;
+  margin-top: 0px;
 }
 
 .exhibita .exhibitxt {
@@ -346,19 +352,34 @@ h4 {
 
 .thesis .exhibitb {
   width: 40%;
+  background-color: silver;
+  margin-left: 40px;
+  margin-right: auto;
+  margin-top: 80px;
 }
 
 .exhibitb .fisma {
+  display: flex;
 }
 
-.exhibitbpic {
-  margin: 16px;
+.fisma .exhibitbpic {
+  margin: 32px;
   width: 35%;
   height: auto;
 }
 
 .fisma .fismatxt {
+  margin: 24px 16px;
   width: 65%;
+}
+
+.fismatxt h3 {
+    line-height: 50px;
+    margin-bottom: 18px;
+}
+
+.fismatxt h4 {
+  line-height: 40px;
 }
 
 .exhibitb .nowthen {
