--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -316,6 +316,7 @@ h4 {
 
 .thesis {
   padding-top: 96px;
+  width: 100%;
 }
 
 .thesis h2 {
@@ -326,16 +327,20 @@ h4 {
 
 .thesis .exhibit {
   display: flex;
+  width: 100%;
 }
 
 .thesis .exhibita {
   padding-top: 0px;
+  display: flex;
+  justify-content: flex-start;
   width: 55%;
   background-color: silver;
   margin-left: 24px;
   margin-bottom: 24px;
   margin-top: 80px;
   border: solid 4px #c6c1c1;
+  height: 750px;
 }
 
 .exhibita .exhibitavid {
@@ -351,10 +356,10 @@ h4 {
 }
 
 .thesis .exhibitb {
-  width: 40%;
+  width: 55%;
   background-color: silver;
   margin-left: 40px;
-  margin-right: auto;
+  margin-right: 0px;
   margin-top: 80px;
 }
 
@@ -369,7 +374,7 @@ h4 {
 }
 
 .fisma .fismatxt {
-  margin: 24px 16px;
+  margin: 26px 16px;
   width: 65%;
 }
 
@@ -383,10 +388,22 @@ h4 {
 }
 
 .exhibitb .nowthen {
-  margin-left: 24px;
+  display: flex;
+  padding: 32px 24px;
+  height: 500px;
+  background-color: white;
+}
+
+.nowthen .exhibitbpic {
 }
 
 .nowthen .ntxt {
+  margin-left: 56px;
+  margin-top: 40px;
+}
+
+.ntxt h3 {
+  margin-bottom: 8px;
 }
 
 .thesis .urban {
