--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -75,6 +75,18 @@ a {
   font-size: 32px;
 }
 
+@media only screen and (min-width: 768px) {
+  .logo .mobile {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .logo .mobile {
+    width: 100%;
+  }
+}
+
 .intro {
   background-color: silver;
   padding: 32px 24px;
@@ -431,14 +443,23 @@ h4 {
 footer {
   padding-top: 16px;
   padding-left: 24px;
-  margin-top: 32px;
 }
 
 footer .footer {
+  display: flex;
+  margin-bottom: 60px;
 }
 
 .footer h5 {
-  font-size: 28px;
+  font-size: 24px;
   color: grey;
   line-height: 25px;
+}
+
+.footer span {
+  display: flex;
+  justify-content: flex-end;
+}
+
+span h5 {
 }
