--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -25,6 +25,25 @@ header .logo {
   height: 64px;
 }
 
+@media only screen and (max-width: 760px) {
+  header .desktop {
+    display: none;
+  }
+  header .mobile {
+  display: block;
+  width: 100%;
+}
+header .mobile ul {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+}
+header .mobile li {
+  padding: 0;
+}
+}
+
 .logo img {
   font-size: 30px;
   margin-left: 24px;
@@ -73,12 +92,6 @@ a {
   vertical-align: bottom;
   text-align: right;
   font-size: 32px;
-}
-
-@media only screen and (min-width: 768px) {
-  .logo .mobile {
-    display: none;
-  }
 }
 
 @media only screen and (min-width: 768px) {
