--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -26,21 +26,26 @@ header .logo {
 }
 
 @media only screen and (max-width: 760px) {
-  header .desktop {
+  header .logo {
     display: none;
   }
   header .mobile {
   display: block;
-  width: 100%;
+  width: 30%;
 }
 header .mobile ul {
   display: flex;
   justify-content: space-around;
   align-items: center;
   width: 100%;
+  height: 110px;
 }
 header .mobile li {
   padding: 0;
+}
+.mobile ul img {
+  height: 60px;
+  margin-left: 0px;
 }
 }
 
@@ -94,7 +99,13 @@ a {
   font-size: 32px;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (max-width: 760px) {
+  header .desktop {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 760px) {
   .logo .mobile {
     width: 100%;
   }
@@ -117,6 +128,22 @@ a {
   display: flex;
   flex-direction: column;
   background-color: silver;
+}
+
+@media only screen and (max-width: 760px) {
+  .intro {
+    padding: 0px;
+  }
+  .learn {
+    padding-top: 0px;
+  }
+  .learn .learnpic {
+    width: 100%;
+    margin: 0px;
+  }
+  .learnpic img {
+    width: 645px;
+  }
 }
 
 .learnright {
