--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -201,6 +201,17 @@ h3 {
     color: #2F363D;
     line-height: 75px;
   }
+  .learnright .learnbutton {
+    margin-top: 56px;
+    margin-bottom: 32px;
+    padding-top: 8px;
+    flex-direction: column;
+    padding-bottom: 8px;
+    background-color: #2F363D;
+    width: 70%;
+    display: flex;
+    align-items: center;
+  }
 }
 
 .info {
@@ -328,6 +339,60 @@ h4 {
   font-size: 28px;
   color: lightblue;
   margin-left: auto;
+}
+
+@media only screen and (max-width: 760px) {
+  .practicepic {
+    display: none;
+  }
+  .info .inforight {
+    margin-left: 15px;
+    padding: 8px 0px;
+    border-left: 0px solid silver;
+    margin-top: 0px;
+    display: flex;
+    flex-direction: column;
+  }
+  .inforight .infoitem {
+    display: flex;
+    width: 100%;
+    padding-right: 0px;
+    border-top: 0px solid silver;
+    border-bottom: 0px solid silver;
+  }
+
+  .infoitem .infopic {
+    height: auto;
+    margin: 32px 0px;
+  }
+
+  .infopic img {
+    border: 0px solid silver;
+    width: 100%;
+  }
+
+  .infoitem .infotxt {
+    width: 65%;
+    margin-top: 50px;
+  }
+
+  .infotxt h3 {
+    margin-bottom: 8px;
+    margin-top: 20px;
+  }
+
+  h4 {
+    font-size: 28px;
+    color: grey;
+    margin-bottom: 28px;
+    line-height: 40px;
+  }
+
+  .infotxt a {
+    font-size: 28px;
+    color: lightblue;
+    margin-left: auto;
+  }
 }
 
 .learning {
