--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -25,30 +25,6 @@ header .logo {
   height: 64px;
 }
 
-@media only screen and (max-width: 760px) {
-  header .logo {
-    display: none;
-  }
-  header .mobile {
-  display: block;
-  width: 30%;
-}
-header .mobile ul {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 100%;
-  height: 110px;
-}
-header .mobile li {
-  padding: 0;
-}
-.mobile ul img {
-  height: 60px;
-  margin-left: 0px;
-}
-}
-
 .logo img {
   font-size: 30px;
   margin-left: 24px;
@@ -64,7 +40,6 @@ header .mobile li {
 h1 {
   font-weight: bold;
 }
-
 
 #darkgrey {
   color: #2F363D;
@@ -99,16 +74,36 @@ a {
   font-size: 32px;
 }
 
+
 @media only screen and (max-width: 760px) {
+  header .logo {
+    display: none;
+  }
+
   header .desktop {
     display: none;
   }
+  header .mobile {
+  display: block;
+  width: 30%;
 }
-
-@media only screen and (min-width: 760px) {
-  .logo .mobile {
-    width: 100%;
-  }
+header .mobile ul {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  height: 110px;
+}
+header .mobile li {
+  padding: 0;
+}
+.logo .mobile {
+  width: 100%;
+}
+.mobile ul img {
+  height: 60px;
+  margin-left: 0px;
+}
 }
 
 .intro {
@@ -128,25 +123,6 @@ a {
   display: flex;
   flex-direction: column;
   background-color: silver;
-}
-
-@media only screen and (max-width: 760px) {
-  .intro {
-    padding: 0px;
-  }
-  .learn {
-    padding-top: 0px;
-    display: flex;
-    flex-direction: column;
-  }
-  .learn .learnpic {
-    width: 100%;
-    margin: 0px;
-  }
-  .learnpic img {
-    width: 645px;
-    height: 380px;
-  }
 }
 
 .learnright {
@@ -188,33 +164,45 @@ h3 {
 }
 
 @media only screen and (max-width: 760px) {
-  .learnright {
-    width: 40%;
+  .intro {
+    padding: 0px;
+  }
+  .learn {
+    padding-top: 0px;
     display: flex;
     flex-direction: column;
-    padding: 30px 35px;
-    font-weight: bolder;
   }
-  h2 {
-    font-size: 60px;
-    font-weight: bold;
-    color: #2F363D;
-    line-height: 75px;
+  .learn .learnpic {
+    width: 100%;
+    margin: 0px;
   }
-  .learnright .learnbutton {
-    margin-top: 56px;
-    margin-bottom: 32px;
-    padding-top: 8px;
-    flex-direction: column;
-    padding-bottom: 8px;
-    background-color: #2F363D;
-    width: 70%;
-    display: flex;
-    align-items: center;
-  }
-  .practicepic {
-    display: none;
-  }
+  .learnpic img {
+    width: 645px;
+    height: 380px;
+    .learnright {
+      width: 40%;
+      display: flex;
+      flex-direction: column;
+      padding: 30px 35px;
+      font-weight: bolder;
+    }
+    h2 {
+      font-size: 60px;
+      font-weight: bold;
+      color: #2F363D;
+      line-height: 75px;
+    }
+    .learnright .learnbutton {
+      margin-top: 56px;
+      margin-bottom: 32px;
+      padding-top: 8px;
+      flex-direction: column;
+      padding-bottom: 8px;
+      background-color: #2F363D;
+      width: 70%;
+      display: flex;
+      align-items: center;
+    }
 }
 
 .info {
@@ -349,6 +337,9 @@ h4 {
     background-color: #F8F8FF;
     padding: 0px;
   }
+  .practicepic {
+    display: none;
+  }
   .info .inforight {
     padding: 0px;
     border-left: 0px solid silver;
@@ -359,8 +350,8 @@ h4 {
   .inforight .infoitem {
     display: flex;
     padding-right: 0px;
-    border-top: 0px solid silver;
-    border-bottom: 0px solid silver;
+    border-top: 0px;
+    border-bottom: 0px;
     flex-direction: column;
   }
 
@@ -377,8 +368,10 @@ h4 {
   }
 
   .infoitem .infotxt {
+    margin-top: 0px;
     margin-left: 24px;
     line-height: 24px;
+    margin-bottom: 20px;
   }
 
   .infotxt h3 {
@@ -397,7 +390,57 @@ h4 {
     font-size: 28px;
     color: lightblue;
     margin-left: auto;
-    margin-bottom: 50px;
+    margin-bottom: 55px;
+  }
+  .infopic img {
+    border: none;
+    height: auto;
+  }
+  .inforight .guest {
+    display: flex;
+    padding-right: 0px;
+    border-top: 0px;
+    border-bottom: 0px;
+    flex-direction: column;
+  }
+  .guest .infopic {
+    width: 100%;
+    margin-left: 8px;
+    margin-bottom: none;
+  }
+  .infopic .desktop {
+    display: none;
+  }
+
+  .infopic .mobile {
+  }
+
+  .mobile img {
+    margin-bottom: none;
+  }
+
+  .guestxt {
+    margin-top: 0px;
+    margin-left: 24px;
+    line-height: 24px;
+    margin-bottom: 20px;
+    padding-top: 0px;
+    width: 60%;
+  }
+
+  .guestxt h3 {
+    margin-bottom: 4px;
+    margin-top: 0px;
+  }
+
+  .guestxt h4 {
+    margin-bottom: 24px;
+  }
+
+  .guestxt a {
+    font-size: 28px;
+    color: lightblue;
+    margin-left: auto;
   }
 }
 
