--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -441,6 +441,7 @@ h4 {
     font-size: 28px;
     color: lightblue;
     margin-left: auto;
+    margin-bottom: 32px;
   }
 }
 
@@ -497,6 +498,69 @@ h4 {
   margin-bottom: 10px;
   font-weight: normal;
   font-size: 29px;
+}
+
+@media only screen and (max-width: 760px) {
+
+.learning {
+  padding-top: 32px;
+  padding-left: 0px;
+  padding-bottom: 8px;
+  background-color: #F8F8FF;
+  font-weight: bold;
+  margin-top: 48px;
+  border-top: solid 0.5px #c6c1c1;
+}
+
+.learning .start {
+  text-align: left;
+}
+
+.start h2 {
+  margin-top: 24px;
+  margin-left: 150px;
+  margin-bottom: 56px;
+  margin-right: 8px;
+  font-size: 56px;
+}
+
+.learning .main {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+  padding-left: 40px;
+}
+
+.main .mainitem {
+}
+
+.mainitem .mainpic {
+  height: auto;
+  margin-right: 40px;
+}
+
+.mainpic img {
+  display: none;
+}
+
+.mainitem .maintxt {
+  line-height: 8px;
+  padding-top: 4px;
+  background-color: silver;
+  height: 40px;
+  margin-bottom: 16px;
+  width: 525px;
+}
+
+.maintxt h3 {
+  margin-top: 32px;
+  margin-bottom: 40px;
+}
+
+.maintxt h4 {
+  display: none;
+}
 }
 
 .thesis {
@@ -596,6 +660,115 @@ h4 {
 }
 
 .thesis .urban {
+}
+
+@media only screen and (max-width: 760px) {
+  .thesis {
+    padding-top: 32px;
+    padding-left: 0px;
+    padding-bottom: 120px;
+    background-color: #F8F8FF;
+    font-weight: bold;
+    margin-top: 48px;
+    border-top: solid 0.5px #c6c1c1;
+  }
+
+  .thesis h2 {
+    text-align: left;
+    font-size: 60px;
+    margin-bottom: 0px;
+    margin-top: 25px;
+    margin-left: 125px;
+  }
+
+  .thesis .exhibit {
+    display: flex;
+    width: 100%;
+  }
+
+  .thesis .exhibita {
+    padding-top: 0px;
+    display: flex;
+    justify-content: flex-start;
+    width: 55%;
+    background-color: silver;
+    margin-left: 24px;
+    margin-top: 56px;
+    border: solid 4px #c6c1c1;
+    height: 750px;
+  }
+
+  .exhibita .exhibitavid {
+    width: 63%;
+    margin-top: 0px;
+  }
+
+  .exhibitavid video {
+    height: 45%;
+    width: 100%;
+  }
+
+  .exhibita .exhibitxt {
+    padding-top: 24px;
+  }
+
+  .exhibitxt h3 {
+    margin-bottom: 8px;
+  }
+
+  .thesis .exhibitb {
+    width: 55%;
+    background-color: silver;
+    margin-left: 40px;
+    margin-right: 0px;
+    margin-top: 80px;
+  }
+
+  .exhibitb .fisma {
+    display: flex;
+  }
+
+  .fisma .exhibitbpic {
+    margin: 32px;
+    width: 35%;
+    height: auto;
+  }
+
+  .fisma .fismatxt {
+    margin: 26px 16px;
+    width: 65%;
+  }
+
+  .fismatxt h3 {
+      line-height: 50px;
+      margin-bottom: 18px;
+  }
+
+  .fismatxt h4 {
+    line-height: 40px;
+  }
+
+  .exhibitb .nowthen {
+    display: flex;
+    padding: 32px 24px;
+    height: 350px;
+    background-color: white;
+  }
+
+  .nowthen .exhibitbpic {
+  }
+
+  .nowthen .ntxt {
+    margin-left: 56px;
+    margin-top: 40px;
+  }
+
+  .ntxt h3 {
+    margin-bottom: 8px;
+  }
+
+  .thesis .urban {
+  }
 }
 
 .exhibitatxt {
