--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -683,7 +683,8 @@ h4 {
 
   .thesis .exhibit {
     display: flex;
-    width: 100%;
+    width: 63.5%;
+    height: 450px;
   }
 
   .thesis .exhibita {
@@ -692,19 +693,20 @@ h4 {
     justify-content: flex-start;
     width: 55%;
     background-color: silver;
-    margin-left: 24px;
+    margin-left: 0px;
     margin-top: 56px;
     border: solid 4px #c6c1c1;
-    height: 750px;
+    height: 100%;
   }
 
   .exhibita .exhibitavid {
-    width: 63%;
+    width: 100%;
+    height: 100%;
     margin-top: 0px;
   }
 
   .exhibitavid video {
-    height: 45%;
+    height: 100%;
     width: 100%;
   }
 
@@ -786,6 +788,20 @@ h4 {
   line-height: 40px;
 }
 
+@media only screen and (max-width: 760px) {
+  .exhibitatxt {
+    display: none;
+  }
+
+  .exhibitatxt h3 {
+    margin-bottom: 16px;
+  }
+
+  .exhibitatxt h4 {
+    line-height: 40px;
+  }
+}
+
 footer {
   padding-top: 16px;
   padding-left: 24px;
@@ -808,4 +824,29 @@ footer .footer {
 }
 
 span h5 {
+}
+
+@media only screen and (max-width: 760px) {
+  footer {
+    padding-top: 16px;
+    padding-left: 24px;
+  }
+
+  footer .footer {
+    display: flex;
+    margin-bottom: 0px;
+  }
+
+  .footer h5 {
+    font-size: 24px;
+    color: grey;
+    line-height: 25px;
+    margin-top: 24px;
+    margin-bottom: 64px;
+    margin-left: 32px;
+  }
+
+   .footer h6 {
+     display: none;
+  }
 }
