--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,6 +1,4 @@
 
-
-
 html {
   font-family: "Avenir", sans-serif;
 }
@@ -10,13 +8,9 @@ body {
 }
 
 @media only screen and (max-width: 760px) {
-  html {
-    font-family: "Avenir", sans-serif;
-  }
-
   body {
-    overflow-x: hidden;
-  }
+  overflow-x: hidden;
+}
 }
 
 header {
@@ -33,6 +27,7 @@ header .logo {
 }
 
 .logo img {
+  font-size: 30px;
   margin-left: 24px;
   align-self: center;
   margin-right: 5px;
@@ -40,12 +35,10 @@ header .logo {
   width: 24px;
 }
 
-.logo span {
-}
-
 h1 {
   font-weight: bold;
 }
+
 
 #darkgrey {
   color: #2F363D;
@@ -85,35 +78,34 @@ a {
 }
 
 @media only screen and (max-width: 760px) {
-  header .logo {
+  .logo .mobile {
     display: none;
   }
-
   header .desktop {
-    display: none;
+      display: none;
+    }
+    header .mobile {
+    display: block;
+    width: 30%;
   }
-  header .mobile {
-  display: block;
-  width: 30%;
-}
-header .mobile ul {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 100%;
-  height: 110px;
-}
-header .mobile li {
-  padding: 0;
-}
-.logo .mobile {
-  width: 100%;
-}
-.mobile ul img {
-  height: 60px;
-  margin-left: 0px;
-}
-}
+  header .mobile ul {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    height: 110px;
+  }
+  header .mobile li {
+    padding: 0;
+  }
+  .logo .mobile {
+    width: 100%;
+  }
+  .mobile ul img {
+    height: 60px;
+    margin-left: 0px;
+  }
+  }
 
 .intro {
   background-color: silver;
@@ -128,14 +120,14 @@ header .mobile li {
 
 .learn .learnpic {
   width: 56%;
-  margin: 0px 24px 32px 28px;
+  margin: 0px 24px 32px 32px;
   display: flex;
   flex-direction: column;
   background-color: silver;
 }
 
 .learnpic img {
-  margin-left: 8px;
+  margin-left: 16px;
 }
 
 .learnright {
@@ -192,7 +184,8 @@ h3 {
   .learnpic img {
     width: 645px;
     height: 380px;
-    .learnright {
+  }
+  .learnright {
       width: 40%;
       display: flex;
       flex-direction: column;
@@ -217,23 +210,25 @@ h3 {
       align-items: center;
     }
 }
+}
 
 .info {
   background-color: #F8F8FF;
-  padding-top: 32px;
+  padding: 0px 24px;
 }
 
 .info .practice {
   background-color: #F8F8FF;
-  padding: 32px;
+  display: flex;
 }
 
 .practice .practicepic {
   background-color: #F8F8FF;
-  width: 56%;
-  margin: 24px 24px 32px 28px;
-  display: flex;
-  flex-direction: column;
+  width: 55%;
+  margin-top: 32px;
+  margin-left: 48px;
+  border-right: silver;
+  padding-top: 32px;
 }
 
 .practicepic img {
@@ -241,8 +236,8 @@ h3 {
 }
 
 .practicepic h2 {
-  margin-bottom: 64px;
-  margin-top: 80px;
+  margin-bottom: 40px;
+  margin-top: 64px;
   font-size: 60px;
   font-weight: bold;
 }
@@ -786,6 +781,7 @@ h4 {
   }
 }
 
+
 .exhibitatxt {
   margin-left: 24px;
   width: 55%;
@@ -814,6 +810,7 @@ h4 {
     line-height: 40px;
   }
 }
+
 
 footer {
   padding-top: 16px;
