--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,37 +1,38 @@
 
 html {
   font-family: "Avenir", sans-serif;
+  max-width: 2065px;
 }
 
 body {
-  width: 2050px;
+  width: 2065px;
 }
 
 @media only screen and (max-width: 760px) {
   body {
-  overflow-x: hidden;
+    overflow-x: hidden;
+
 }
 }
 
 header {
   border-bottom: solid 1px #c6c1c1;
-  height: 104px;
+  height: 86px;
 }
 
 header .logo {
   display: flex;
   align-items: center;
-  padding: 16px 24px;
   width: 100%;
-  height: 64px;
+  height: 50%;
+  margin-top: 24px;
 }
 
 .logo img {
   font-size: 30px;
-  margin-left: 24px;
   align-self: center;
-  margin-right: 5px;
-  height: 32px;
+  margin-left: 64px;
+  height: 48px;
   width: 24px;
 }
 
@@ -54,7 +55,7 @@ h1 {
 
 .logo nav {
   width: 100%;
-  padding-right: 48px;
+  padding-right: 16px;
 }
 
 nav ul {
@@ -67,7 +68,7 @@ ul li {
 }
 
 a {
-  margin: 16px;
+  margin: 24px;
   vertical-align: bottom;
   text-align: right;
   font-size: 32px;
@@ -78,7 +79,7 @@ a {
 }
 
 @media only screen and (max-width: 760px) {
-  .logo .mobile {
+  .logo img, h1 {
     display: none;
   }
   header .desktop {
@@ -87,22 +88,24 @@ a {
     header .mobile {
     display: block;
     width: 30%;
+    padding-bottom: 32px;
   }
-  header .mobile ul {
+  .logo .mobile {
+    width: 100%;
+    padding-bottom: 24px;
+    height: 50px;
+  }
+  .mobile ul {
     display: flex;
     justify-content: space-around;
     align-items: center;
     width: 100%;
-    height: 110px;
+    height: 0px;
+    padding-bottom: 48px;
   }
-  header .mobile li {
-    padding: 0;
-  }
-  .logo .mobile {
-    width: 100%;
-  }
+
   .mobile ul img {
-    height: 60px;
+    height: 64px;
     margin-left: 0px;
   }
   }
@@ -120,7 +123,7 @@ a {
 
 .learn .learnpic {
   width: 56%;
-  margin: 0px 24px 32px 32px;
+  margin: 0px 24px 32px 8px;
   display: flex;
   flex-direction: column;
   background-color: silver;
@@ -182,8 +185,9 @@ h3 {
     margin: 0px;
   }
   .learnpic img {
-    width: 645px;
+    width: 675px;
     height: 380px;
+    margin-left: 0px;
   }
   .learnright {
       width: 40%;
@@ -224,11 +228,12 @@ h3 {
 
 .practice .practicepic {
   background-color: #F8F8FF;
-  width: 55%;
+  width: 54.5%;
   margin-top: 32px;
   margin-left: 48px;
   border-right: silver;
   padding-top: 32px;
+  padding-right: 24px;
 }
 
 .practicepic img {
@@ -236,7 +241,7 @@ h3 {
 }
 
 .practicepic h2 {
-  margin-bottom: 40px;
+  margin-bottom: 48px;
   margin-top: 64px;
   font-size: 60px;
   font-weight: bold;
@@ -269,14 +274,13 @@ h3 {
   display: flex;
   width: 100%;
   padding-right: 0px;
-  border-top: 1px solid silver;
   border-bottom: 1px solid silver;
 }
 
 .infoitem .infopic {
   width: 35%;
   height: auto;
-  margin: 32px 38px;
+  margin: 32px 32px;
 }
 
 .infopic img {
@@ -297,14 +301,19 @@ h3 {
 h4 {
   font-size: 28px;
   color: grey;
-  margin-bottom: 28px;
+  margin-bottom: 16px;
   line-height: 40px;
+}
+
+.infotxt span {
+  display: inline-block;
+  margin-left: 0px;
 }
 
 .infotxt a {
   font-size: 28px;
   color: lightblue;
-  margin-left: auto;
+  margin-left: 0px;
 }
 
 .inforight .guest {
@@ -312,12 +321,13 @@ h4 {
   width: 100%;
   border-top: 1px solid silver;
   border-bottom: 1px solid silver;
+  background-color: silver;
 }
 
 .guest .infopic {
   width: 35%;
   height: auto;
-  margin: 32px 38px;
+  margin: 32px 32px;
 }
 
 .guestxt {
@@ -364,7 +374,7 @@ h4 {
   }
 
   .infoitem .infopic {
-    width: 100%;
+    width: 25%;
     margin-left: 8px;
   }
 
@@ -372,7 +382,13 @@ h4 {
     display: none;
   }
 
-  .infopic .mobile {
+.infopic .mobile {
+  display: flex;
+  width: 2400px;
+}
+
+  .infopic .mobile img {
+    width: 25%;
   }
 
   .infoitem .infotxt {
@@ -410,6 +426,7 @@ h4 {
     border-top: 0px;
     border-bottom: 0px;
     flex-direction: column;
+    background-color: white;
   }
   .guest .infopic {
     width: 100%;
@@ -527,13 +544,13 @@ h4 {
 .start h2 {
   margin-top: 24px;
   margin-left: 150px;
-  margin-bottom: 56px;
+  margin-bottom: 40px;
   margin-right: 8px;
   font-size: 56px;
 }
 
 .learning .main {
-  margin-top: 30px;
+  margin-top: 4px;
   display: flex;
   flex-direction: column;
   width: 60%;
@@ -556,9 +573,9 @@ h4 {
   line-height: 8px;
   padding-top: 4px;
   background-color: silver;
-  height: 40px;
+  height: 80px;
   margin-bottom: 16px;
-  width: 525px;
+  width: 550px;
 }
 
 .maintxt h3 {
@@ -574,6 +591,9 @@ h4 {
 .thesis {
   padding-top: 96px;
   width: 100%;
+  margin-bottom: 24px;
+  height: 1175px;
+  background-color: white;
 }
 
 .thesis h2 {
@@ -585,27 +605,31 @@ h4 {
 .thesis .exhibit {
   display: flex;
   width: 100%;
+  height: 1035px;
 }
 
 .thesis .exhibita {
   padding-top: 0px;
   display: flex;
   justify-content: flex-start;
-  width: 55%;
+  height: 100%;
+  width: 70%;
   background-color: silver;
-  margin-left: 24px;
+  margin-left: 48px;
   margin-top: 80px;
   border: solid 4px #c6c1c1;
-  height: 750px;
 }
 
 .exhibita .exhibitavid {
   width: 100%;
   margin-top: 0px;
+  margin-left: 0px;
+  height: 75%;
 }
 
-.exhibitavid video {
+.exhibitavid video source {
   height: 100%;
+  margin-left: 0px;
 }
 
 .exhibita .exhibitxt {
@@ -651,7 +675,7 @@ h4 {
 .exhibitb .nowthen {
   display: flex;
   padding: 32px 24px;
-  height: 350px;
+  height: 575px;
   background-color: white;
 }
 
@@ -672,129 +696,132 @@ h4 {
 
 @media only screen and (max-width: 760px) {
   .thesis {
-    padding-top: 32px;
-    padding-left: 0px;
-    padding-bottom: 120px;
-    background-color: #F8F8FF;
-    font-weight: bold;
-    margin-top: 48px;
-    border-top: solid 0.5px #c6c1c1;
-  }
+   padding-top: 32px;
+   padding-left: 0px;
+   padding-bottom: 120px;
+   background-color: #F8F8FF;
+   font-weight: bold;
+   margin-top: 48px;
+   border-top: solid 0.5px #c6c1c1;
+   height: 470px;
+ }
 
-  .thesis h2 {
-    text-align: left;
-    font-size: 60px;
-    margin-bottom: 0px;
-    margin-top: 25px;
-    margin-left: 125px;
-  }
+ .thesis h2 {
+   text-align: left;
+   font-size: 60px;
+   margin-bottom: 0px;
+   margin-top: 25px;
+   margin-left: 125px;
+ }
 
-  .thesis .exhibit {
-    display: flex;
-    width: 63.5%;
-    height: 450px;
-  }
+ .thesis .exhibit {
+   display: flex;
+   width: 66%;
+   height: 450px;
+ }
 
-  .thesis .exhibita {
-    padding-top: 0px;
-    display: flex;
-    justify-content: flex-start;
-    width: 55%;
-    background-color: silver;
-    margin-left: 0px;
-    margin-top: 56px;
-    border: solid 4px #c6c1c1;
-    height: 100%;
-  }
+ .thesis .exhibita {
+   padding-top: 0px;
+   display: flex;
+   justify-content: flex-start;
+   width: 55%;
+   background-color: silver;
+   margin-left: 0px;
+   margin-top: 56px;
+   border: solid 4px #c6c1c1;
+   height: 100%;
+ }
 
-  .exhibita .exhibitavid {
-    width: 100%;
-    height: 100%;
-    margin-top: 0px;
-  }
+ .exhibita .exhibitavid {
+   width: 100%;
+   height: 100%;
+   margin-top: 0px;
+ }
 
-  .exhibitavid video {
-    height: 100%;
-    width: 100%;
-  }
+ .exhibitavid video {
+   height: 100%;
+   width: 100%;
+ }
 
-  .exhibita .exhibitxt {
-    padding-top: 24px;
-  }
+ .exhibita .exhibitxt {
+   padding-top: 24px;
+ }
 
-  .exhibitxt h3 {
-    margin-bottom: 8px;
-  }
+ .exhibitxt h3 {
+   margin-bottom: 8px;
+ }
 
-  .thesis .exhibitb {
-    width: 55%;
-    background-color: silver;
-    margin-left: 40px;
-    margin-right: 0px;
-    margin-top: 80px;
-  }
+ .thesis .exhibitb {
+   width: 55%;
+   background-color: silver;
+   margin-left: 40px;
+   margin-right: 0px;
+   margin-top: 80px;
+ }
 
-  .exhibitb .fisma {
-    display: flex;
-  }
+ .exhibitb .fisma {
+   display: flex;
+ }
 
-  .fisma .exhibitbpic {
-    margin: 32px;
-    width: 35%;
-    height: auto;
-  }
+ .fisma .exhibitbpic {
+   margin: 32px;
+   width: 35%;
+   height: auto;
+ }
 
-  .fisma .fismatxt {
-    margin: 26px 16px;
-    width: 65%;
-  }
+ .fisma .fismatxt {
+   margin: 26px 16px;
+   width: 65%;
+ }
 
-  .fismatxt h3 {
-      line-height: 50px;
-      margin-bottom: 18px;
-  }
+ .fismatxt h3 {
+     line-height: 50px;
+     margin-bottom: 18px;
+ }
 
-  .fismatxt h4 {
-    line-height: 40px;
-  }
+ .fismatxt h4 {
+   line-height: 40px;
+ }
 
-  .exhibitb .nowthen {
-    display: flex;
-    padding: 32px 24px;
-    height: 350px;
-    background-color: white;
-  }
+ .exhibitb .nowthen {
+   display: flex;
+   padding: 32px 24px;
+   height: 350px;
+   background-color: white;
+ }
 
-  .nowthen .exhibitbpic {
-  }
+ .nowthen .exhibitbpic {
+ }
 
-  .nowthen .ntxt {
-    margin-left: 56px;
-    margin-top: 40px;
-  }
+ .nowthen .ntxt {
+   margin-left: 56px;
+   margin-top: 40px;
+ }
 
-  .ntxt h3 {
-    margin-bottom: 8px;
-  }
+ .ntxt h3 {
+   margin-bottom: 8px;
+ }
 
-  .thesis .urban {
-  }
+ .thesis .urban {
+ }
 }
 
 
 .exhibitatxt {
-  margin-left: 24px;
+  margin-top: 24px;
   width: 55%;
-  margin-bottom: 64px;
-  border-bottom: solid 2px #c6c1c1;
+  margin-bottom: 24px;
 }
 
 .exhibitatxt h3 {
+  margin-left: 56px;
   margin-bottom: 16px;
 }
 
 .exhibitatxt h4 {
   line-height: 40px;
+  margin-left: 56px;
+  margin-bottom: 64px;
 }
 
 @media only screen and (max-width: 760px) {
@@ -814,16 +841,34 @@ h4 {
 
 footer {
   padding-top: 16px;
-  padding-left: 24px;
+  width: 100%;
+  border-top: solid 2px #c6c1c1;
 }
 
 footer .footer {
   display: flex;
-  margin-bottom: 60px;
+  width: 100%;
 }
 
 .footer h5 {
   font-size: 24px;
+  color: grey;
+  margin-left: 56px;
+  margin-top: 24px;
+  margin-bottom: 100px;
+}
+
+.footer span {
+  display: flex;
+  justify-content: flex-end;
+  margin-left: 550px;
+}
+
+.footer span a {
+  display: inline-block;
+  float: right;
+  font-size: 24px;
+  margin-right: 16px;
   color: grey;
   line-height: 25px;
 }
@@ -843,12 +888,12 @@ footer .footer {
     font-size: 24px;
     color: grey;
     line-height: 25px;
-    margin-top: 24px;
+    margin-top: 72px;
     margin-bottom: 200px;
     margin-left: 32px;
   }
 
-   .footer h6 {
+   .footer span a {
      display: none;
   }
 }
