--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -34,6 +34,7 @@ header .logo {
   margin-left: 64px;
   height: 48px;
   width: 24px;
+  color: #0000FF;
 }
 
 h1 {
@@ -41,8 +42,8 @@ h1 {
 }
 
 
-#darkgrey {
-  color: #2F363D;
+#blue {
+  color: #0000FF;
   height: 32px;
   width: 85.3px;
 }
@@ -808,7 +809,7 @@ h4 {
 
 
 .exhibitatxt {
-  margin-top: 24px;
+  margin-top: 48px;
   width: 55%;
   margin-bottom: 24px;
 }
